--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -521,8 +521,7 @@ Use case ends.
 . 1b. Interval between notificaitons larger than period.
   . 1b1. GuiltTrip notifies user that frequency must be smaller than period.
  . 1c. Index out of bounds.
-  . 1b1. GuiltTrip requests for suitable index.
-  
+  . 1c1. GuiltTrip requests for suitable index. 
  === Use Case 11: Edit Reminder
 
 ==== MSS
