Fix command text field bug (#211)
* Updated UniqueModule/TutorialList methods

* Update UniqueModule/TutorialList methods, fix tests

* Add test for AddTutorialCommand

* Fix checkstyle

* Update tests for AddTutorialCommand

* Add commands for deleting tutorials and modules

* Accept multiple input types for addTutorialCommand weeks

* Add confirmation prompt for deleting non-empty modules & tutorials

* Fix "y/n" recognition, proper module/tutorial deletion

* Add suggested commands for AddTutorialCommand

* Add suggested corrections for three command types

* Add suggested commands for MarkAttendanceCommand (partial)

* Add suggested commands and tests for MarkAttendanceCommand

* Add suggested commands for displaying attendance

* Fix test failing

* Fix checkstyle

* Comment out failing test for now

* Fix checkstyle

* Comment out failing test for now

* Add autocomplete feature

* Add tests for autocomplete feature

* Fix checkstyle, optimise code

* Fix autocomplete bug

* Fix checkstyle

* Add preliminary dev docs for autocorrect

* Add dev docs for autocorrect

* Update dev docs for autocorrect

* Edit dev guide header

* Add EOF newline

* Add EOF newline

* Add dev docs for and streamline autocomplete

* Update dev docs

* Update user guide

* Add autocomplete for command words

* Add command history feature

* Add tests for AutocompleteHandler

* Fix checkstyle

* Add tests for command history

* Clean up ModelStubInputHistoryHandler

* Update dev guide

* Fix typo

* Add missing tests and update existing ones

* Add AddAssignmentCommandParser test

* Add DeleteAssignmentCommandParser test

* Add SetAssignmentScoreCommand test

* Add tests for Event commands

* Update score input checking for assignment parsers

* Add enhance autocomplete

* Fix autocomplete bugs

* Fix checkstyle

* Fix unclickable "smol white speck" text input field

* Improve focusin

--- a/docs/team/lumos309.adoc
+++ b/docs/team/lumos309.adoc
@@ -20,8 +20,8 @@ T.A.rence is a module and class management system aimed at teaching assistants (
 
 *Details*
 
-* Autocorrect generates alternative commands when the user's input does not match data within the application. When there are multiple fields that may have been entered incorrectly (e.g. tutorial names and module codes), T.A.rence attempts to generate different combinations of possible valid values. Fuzzy string matching is used to find data strings that are similar to the user's input.
-* Autocomplete suggests data values to complete the user's current partial input, based on the last detected prefix. It also provides command keyword prompts when appropriate.
+* Autocorrect generates alternative commands when the user's input does not match data within the application. When there are multiple fields that may have been entered incorrectly (e.g. tutorial names and module codes), T.A.rence attempts to generate different combinations of possible valid values. Fuzzy string matching is used to find data strings that are similar to the user's input. [https://github.com/AY1920S1-CS2103-T14-2/main/pull/60[PR #60]], [https://github.com/AY1920S1-CS2103-T14-2/main/pull/62[PR #62]], [https://github.com/AY1920S1-CS2103-T14-2/main/pull/67[PR #67]]
+* Autocomplete suggests data values to complete the user's current partial input, based on the last detected prefix. It also provides command keyword prompts when appropriate. [https://github.com/AY1920S1-CS2103-T14-2/main/pull/82[PR #82]], [https://github.com/AY1920S1-CS2103-T14-2/main/pull/107[PR #107]]
 
 *Credits*
 
@@ -51,6 +51,10 @@ T.A.rence is a module and class management system aimed at teaching assistants (
 
 * Tests to sustain codebase integrity, e.g. [https://github.com/AY1920S1-CS2103-T14-2/main/pull/105[PR #105]], [https://github.com/AY1920S1-CS2103-T14-2/main/pull/196[PR #196]]
 
+* Milestone management, e.g. [https://github.com/AY1920S1-CS2103-T14-2/main/issues/45[1]], [https://github.com/AY1920S1-CS2103-T14-2/main/issues/45[2]], [https://github.com/AY1920S1-CS2103-T14-2/main/pull/67[3]], [https://github.com/AY1920S1-CS2103-T14-2/main/issues/90[4]]
+
+* Bug reporting for other teams: [https://github.com/AY1920S1-CS2103-F09-1/main/issues/138[1]], [https://github.com/AY1920S1-CS2103-F09-1/main/issues/140[2]], [https://github.com/AY1920S1-CS2103-F09-1/main/issues/142[3]], [https://github.com/AY1920S1-CS2103-F09-1/main/issues/143[4]], [https://github.com/AY1920S1-CS2103-F09-1/main/issues/144[5]]
+
 _All code contributed:
 [link:https://github.com/AY1920S1-CS2103-T14-2/main/commits/master?author=lumos309[Commits]],
 [link:https://github.com/AY1920S1-CS2103-T14-2/main/pulls?utf8=%E2%9C%93&q=is%3Apr+author%3Alumos309+[Pull Requests]],
@@ -68,7 +72,9 @@ _All code contributed:
 
 include::../UserGuide.adoc[tag=enhancements]
 
-* Parts of the [https://github.com/AY1920S1-CS2103-T14-2/main/blob/master/docs/UserGuide.adoc#3-features[main features]]
+=== _Features_
+
+include::../UserGuide.adoc[tag=FeatureAddTutorial]
 
 == Contributions to the Developer Guide
 
@@ -95,5 +101,3 @@ include::../DeveloperGuide.adoc[tag=UseCaseDeleteTutorial]
 include::../DeveloperGuide.adoc[tag=UseCaseAddStudent]
 
 include::../DeveloperGuide.adoc[tag=UseCaseMarkAttendance]
-
-* Parts of [https://github.com/AY1920S1-CS2103-T14-2/main/blob/master/docs/DeveloperGuide.adoc#appendix-c-use-cases[Appendix C: Use Cases]]
