--- a/docs/team/ambervoong.adoc
+++ b/docs/team/ambervoong.adoc
@@ -103,20 +103,19 @@ entities contain many fields. I also had to deal with storing entities that cont
 
 === Code Contributed
 You can view my code at https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=falsegroupSelect=groupByRepos&breakdown=false&tabOpen=true&tabType=authorship&tabAuthor=ambervoong&tabRepo=AY1920S1-CS2103T-T13-2%2Fmain%5Bmaster%5D[Reposense].
-If you are on Mac and find the link broken, please use this instead:
-https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=falsegroupSelect=groupByRepos&breakdown=false&tabOpen=true&tabType=authorship&tabAuthor=ambervoong&tabRepo=AY1920S1-CS2103T-T13-2%2Fmain%5Bmaster%5D.
+If you are on Mac and this link is broken, please open the PDF using Google Chrome's PDF reader or Acrobat Reader DC instead of Preview.
 
 === Other contributions
 Other contributions I have made to the team and the project are listed in this section, along with relevant links.
 
 ** Project management:
 *** Maintained the issue tracker and project discussion board on GitHub for every release (https://github.com/AY1920S1-CS2103T-T13-2/main/issues?q=is%3Aissue+is%3Aclosed[link to issue tracker], https://github.com/AY1920S1-CS2103T-T13-2/main/projects/1[link to discussion board])
-*** Managed two out of three releases in this project, `v1.2` and `v1.4` on GitHub. (https://github.com/AY1920S1-CS2103T-T13-2/main/pull/88[#88])
+*** Managed two out of three releases in this project, `v1.2` and `v1.4` on GitHub (https://github.com/AY1920S1-CS2103T-T13-2/main/pull/88[#88])
 ** Enhancements to existing features:
 *** Added storage functionality for Mortago's `Body`, `Worker`, `Fridge`, and `Photo` classes (Pull requests https://github.com/AY1920S1-CS2103T-T13-2/main/pull/128[#128], https://github.com/AY1920S1-CS2103T-T13-2/main/pull/91[#91])
 ** Documentation:
-*** Wrote the UG and DG for the `undo`, `redo`, and `update` features (Pull requests https://github.com/AY1920S1-CS2103T-T13-2/main/pull/113[#113], https://github.com/AY1920S1-CS2103T-T13-2/main/pull/119[#119], https://github.com/AY1920S1-CS2103T-T13-2/main/pull/229/files[#229], https://github.com/AY1920S1-CS2103T-T13-2/main/pull/70[#70])
-*** Morphed the AB3 User Guide for Mortago (https://github.com/AY1920S1-CS2103T-T13-2/main/pull/22[#22])
+*** Wrote the UG and DG for the `undo`, `redo`, and `update` features (Pull requests https://github.com/AY1920S1-CS2103T-T13-2/main/pull/113[#113], https://github.com/AY1920S1-CS2103T-T13-2/main/pull/119[#119], https://github.com/AY1920S1-CS2103T-T13-2/main/pull/229/files[#229], https://github.com/AY1920S1-CS2103T-T13-2/main/pull/70[#70], https://github.com/AY1920S1-CS2103T-T13-2/main/pull/280[#280])
+*** Morphed general sections of AB3's User Guide, Developer Guide, and various documents for Mortago (Pull requests https://github.com/AY1920S1-CS2103T-T13-2/main/pull/22[#22], https://github.com/AY1920S1-CS2103T-T13-2/main/pull/280[#280])
 *** Updated the User Guide diagrams to fit the team's chosen colour scheme (https://github.com/AY1920S1-CS2103T-T13-2/main/pull/249[#249])
 *** Added tags to the User Guide for all features (https://github.com/AY1920S1-CS2103T-T13-2/main/pull/70[#70])
 *** Added use cases and a value preposition to the Developer Guide (Pull requests https://github.com/AY1920S1-CS2103T-T13-2/main/pull/41/files[#41], https://github.com/AY1920S1-CS2103T-T13-2/main/pull/43[#43])
